--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
     </head>
     <body>
         <h1> Jhada Kahan-Thomas's CSCE 190 Site</h1>
+
+        <p>I &hearts; coding!</p>
     </body>
 </html>
