--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <body>
         <h1> Jhada Kahan-Thomas's CSCE 190 Site</h1>
 
-        <p>I &hearts; coding!</p>
+        <section class="assignment">
+            <a href="files/Workout Statement.pdf"><img src="images/workout_routine.png"></a>
+            <section class="ass-details">
+                <a href="files/Workout Statement.pdf"><h2> Problem Statement: Workout Helper</h2></a> 
+                <p> People are confused on how to build their workout routines. 
+                    They come to the local gym confused on how to properly train core muscle groups, handle equipment, or schedule training days with their work schedule.
+                    Individuals come to the gym and spend more time trying to figure out how to workout rather than working out.
+                </p>
+            </section>
+
+        </section>
     </body>
 </html>
