--- a/index.html
+++ b/index.html
@@ -6,13 +6,25 @@
     <body>
         <h1> Jhada Kahan-Thomas's CSCE 190 Site</h1>
 
+        <!---Problem Statement Assignment-->
         <section class="assignment">
-            <a href="files/Workout Statement.pdf"><img src="images/workout_routine.png"></a>
+            <a href="files/Workout-statement.pdf"><img src="images/workout-statement.png"></a>
             <section class="ass-details">
-                <a href="files/Workout Statement.pdf"><h2> Problem Statement: Workout Helper</h2></a> 
+                <a href="files/Workout-statement.pdf"><h2> Problem Statement: Workout Helper</h2></a> 
                 <p> People are confused on how to build their workout routines. 
                     They come to the local gym confused on how to properly train core muscle groups, handle equipment, or schedule training days with their work schedule.
                     Individuals come to the gym and spend more time trying to figure out how to workout rather than working out.
+                </p>
+            </section>
+        </section>
+
+        <!---Affinity Diagram Assignment-->
+        <section class="assignment">
+            <a href="files/jujube-affinity.pdf"><img src="images/jujube-affinity.png"></a>
+            <section class="ass-details">
+                <a href="files/jujube-affinity.pdf"><h2> Affinity Diagram: Workout Helper</h2></a> 
+                <p> Through collaboration, my group and I brainstormed a bunch of ideas, perspectives and information that 
+                    holds purpose in the fitness, gym environment.
                 </p>
             </section>
 
