--- a/index.html
+++ b/index.html
@@ -30,5 +30,16 @@
             </section>
 
         </section>
+        <!---Personas Assignment-->
+        <section class="assignment">
+            <a href="files/personapdf.pdf"><img src="images/persona.png"></a>
+            <section class="ass-details">
+                <a href="files/personapdf.pdf"><h2> Persona: 4 Personas for Workout Helper (Brynn Saunders)</h2></a> 
+                <p> A persona for a person who could be seen in fitness, gym environment or want to begin to join that environment, but may be a 
+                    little lost and seeking some guidance.
+                </p>
+            </section>
+
+        </section>
     </body>
 </html>
