--- a/index.html
+++ b/index.html
@@ -41,5 +41,16 @@
             </section>
 
         </section>
+        <!---Storyboard Assignment-->
+        <section class="assignment">
+            <a href="files/storyboard.pdf"><img src="images/storyboard.png"></a>
+            <section class="ass-details">
+                <a href="files/storyboard.pdf"><h2> Storyboard: Brynn Saunders</h2></a> 
+                <p> Realistic situations of people who would greatly benefit from a workout helper app. A few 
+                    different stories of who those people may be and how the workout helper app will come to the rescue.
+                </p>
+            </section>
+
+        </section>
     </body>
 </html>
