--- a/index.html
+++ b/index.html
@@ -52,5 +52,17 @@
             </section>
 
         </section>
+    </section>
+    <!---Sketches Assignment-->
+    <section class="assignment">
+        <a href="files/sketches.pdf"><img src="images/sketches.png"></a>
+        <section class="ass-details">
+            <a href="files/sketches.pdf"><h2> Sketches: Workout Helper</h2></a> 
+            <p> Sketches of potential designs for a workout helper app. In hopes to solve the problem 
+                of feeling lost when it comes to working out. 
+            </p>
+        </section>
+
+    </section>
     </body>
 </html>
