--- a/index.html
+++ b/index.html
@@ -7,75 +7,71 @@
     <body>
         <h1> Jhada Kahan-Thomas's CSCE 190 Site</h1>
 
-        <div class="assignments"
-            <!---Problem Statement Assignment-->
+        <div class="assignments">
+            <!---Problem Statement Assignment--->
             <section class="assignment">
-                <a href="files/Workout-statement.pdf"><img src="images/workout-statement.png"></a>
-                <section class="ass-details">
-                    <a href="files/Workout-statement.pdf"><h2> Problem Statement: Workout Helper</h2></a> 
+                <a href="files/Workout-statement.pdf"><h2> Problem Statement: Workout Helper</h2></a>
+                <a href="files/Workout-statement.pdf"><img src="images/workout-statement.png"></a> 
                     <p> People are confused on how to build their workout routines. 
                         They come to the local gym confused on how to properly train core muscle groups, handle equipment, or schedule training days with their work schedule.
                         Individuals come to the gym and spend more time trying to figure out how to workout rather than working out.
                     </p>
-                </section>
             </section>
 
             <!---Affinity Diagram Assignment-->
             <section class="assignment">
+                <a href="files/jujube-affinity.pdf"><h2> Affinity Diagram: Workout Helper</h2></a>
                 <a href="files/jujube-affinity.pdf"><img src="images/jujube-affinity.png"></a>
-                <section class="ass-details">
-                    <a href="files/jujube-affinity.pdf"><h2> Affinity Diagram: Workout Helper</h2></a> 
                     <p> Through collaboration, my group and I brainstormed a bunch of ideas, perspectives and information that 
                         holds purpose in the fitness, gym environment.
                     </p>
-                </section>
-
             </section>
+
             <!---Personas Assignment-->
             <section class="assignment">
+                <a href="files/personapdf.pdf"><h2> Persona: 4 Personas for Workout Helper (Brynn Saunders)</h2></a> 
                 <a href="files/personapdf.pdf"><img src="images/persona.png"></a>
-                <section class="ass-details">
-                    <a href="files/personapdf.pdf"><h2> Persona: 4 Personas for Workout Helper (Brynn Saunders)</h2></a> 
                     <p> A persona for a person who could be seen in fitness, gym environment or want to begin to join that environment, but may be a 
                         little lost and seeking some guidance.
                     </p>
-                </section>
-
             </section>
+
             <!---Storyboard Assignment-->
             <section class="assignment">
+                <a href="files/storyboard.pdf"><h2> Storyboard: Brynn Saunders</h2></a>
                 <a href="files/storyboard.pdf"><img src="images/storyboard.png"></a>
-                <section class="ass-details">
-                    <a href="files/storyboard.pdf"><h2> Storyboard: Brynn Saunders</h2></a> 
                     <p> Realistic situations of people who would greatly benefit from a workout helper app. A few 
                         different stories of who those people may be and how the workout helper app will come to the rescue.
                     </p>
-                </section>
-
             </section>
-        </section>
+
         <!---Sketches Assignment-->
         <section class="assignment">
+            <a href="files/sketches.pdf"><h2> Sketches: Workout Helper</h2></a>
             <a href="files/sketches.pdf"><img src="images/sketches.png"></a>
-            <section class="ass-details">
-                <a href="files/sketches.pdf"><h2> Sketches: Workout Helper</h2></a> 
                 <p> Sketches of potential designs for a workout helper app. In hopes to solve the problem 
                     of feeling lost when it comes to working out. 
                 </p>
-            </section>
-
         </section>
+
         <!---Paper Prototype Assignment-->
         <section class="assignment">
+            <a href="https://youtu.be/XHOtS9HoBx0"><h2> Paper Prototype: Workout Helper</h2></a> 
             <a href="https://youtu.be/XHOtS9HoBx0"><img src="images/prototype.png"></a>
-            <section class="ass-details">
-                <a href="https://youtu.be/XHOtS9HoBx0"><h2> Paper Prototype: Workout Helper</h2></a> 
                 <p> A paper prototype of the potential design for a workout helper app. Displays what human interaction would sequentially look 
                     like as the app functions. 
                 </p>
-            </section>
+        </section>
 
-    </section>
-</div>
+        <!---Usability Testing Script Assignment-->
+        <section class="assignment">
+            <a href="files/usability.pdf"><h2> Usability Testing Script: Workout Helper</h2></a> 
+            <a href="files/usability.pdf"><img src="images/usability.png"></a>
+                <p> A script in order to test the usability of a Worker Helper app. So that an observer can get a feel for their position
+                    using the app. This includes feedback regarding how three observers felt trying to use the paper prototype. 
+                </p>
+        </section>
+
+    </div>
     </body>
 </html>
