--- a/index.html
+++ b/index.html
@@ -72,6 +72,15 @@
                 </p>
         </section>
 
+        <!---Low-fi Prototype Assignment-->
+        <section class="assignment">
+            <a href="files/low-fi-prototype /index.html"><h2> Usability Testing Script: Workout Helper</h2></a> 
+            <a href="files/low-fi-prototype /index.html"><img src="images/lowfi_proto.png"></a>
+                <p> This is a low fi prototype for a Workout Helper App. This html prototype allows the viewer to try out the 
+                    functionality of the app and see if it works smoothly. 
+                </p>
+        </section>
+
     </div>
     </body>
 </html>
