--- a/index.html
+++ b/index.html
@@ -74,13 +74,21 @@
 
         <!---Low-fi Prototype Assignment-->
         <section class="assignment">
-            <a href="files/low-fi-prototype/index.html"><h2> Usability Testing Script: Workout Helper</h2></a> 
+            <a href="files/low-fi-prototype/index.html"><h2> Low Fi Prototype: Workout Helper</h2></a> 
             <a href="files/low-fi-prototype/index.html"><img src="images/lowfi_proto.png"></a>
                 <p> This is a low fi prototype for a Workout Helper App. This html prototype allows the viewer to try out the 
                     functionality of the app and see if it works smoothly. 
                 </p>
         </section>
 
+        <!---Hi-Fi Prototype Assignment-->
+        <section class="assignment">
+            <a href="files/hi-fi-prototype/index.html"><h2> Hi-Fi Prototype: Workout Helper</h2></a> 
+            <a href="files/hi-fi-prototype/index.html"><img src="images/hifi_proto.png"></a>
+                <p> This is a Hi-Fi prototype for a Workout Helper App. This html prototype allows the viewer to get a proper visual of what the app would look
+                    like and the functionality. It is great tool to receive feedback on the style, effectiveness, and appeal.
+                </p>
+        </section>
     </div>
     </body>
 </html>
