--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
                 </p>
         </section>
 
-        <!---Hi-Fi Prototype Assignment-->
+        <!---Hi-Fi Prototype Presentation Assignment-->
         <section class="assignment">
-            <a href="files/hi-fi-prototype/index.html"><h2> Hi-Fi Prototype: Workout Helper</h2></a> 
-            <a href="files/hi-fi-prototype/index.html"><img src="images/hifi_proto.png"></a>
-                <p> This is a Hi-Fi prototype for a Workout Helper App. This html prototype allows the viewer to get a proper visual of what the app would look
-                    like and the functionality. It is great tool to receive feedback on the style, effectiveness, and appeal.
+            <a href="https://youtu.be/vKSsTtxDKDQ"><h2> Hi-Fi Prototype: Workout Helper</h2></a> 
+            <a href="https://youtu.be/vKSsTtxDKDQ"><img src="images/hi-presentation.png"></a>
+                <p> This is a Hi-Fi prototype presentation for a Workout Helper App. This presentation demonstrates user implementation of the hi-fi prototype
+                    of a Worker Helper App. This formal demonstration allows the audience to get a real feel for the functioning app.
                 </p>
         </section>
     </div>
