--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <!---Hi-Fi Prototype Presentation Assignment-->
         <section class="assignment">
-            <a href="https://youtu.be/vKSsTtxDKDQ"><h2> Hi-Fi Prototype: Workout Helper</h2></a> 
+            <a href="https://youtu.be/vKSsTtxDKDQ"><h2> Hi-Fi Prototype Presentation: Workout Helper</h2></a> 
             <a href="https://youtu.be/vKSsTtxDKDQ"><img src="images/hi-presentation.png"></a>
                 <p> This is a Hi-Fi prototype presentation for a Workout Helper App. This presentation demonstrates user implementation of the hi-fi prototype
                     of a Worker Helper App. This formal demonstration allows the audience to get a real feel for the functioning app.
